--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  isar: ^3.1.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.0.0
   riverpod: ^2.6.1
   http: ^1.2.0
   flutter_dotenv: ^5.1.0
-  path_provider: ^2.0.15
   google_maps_flutter: ^2.5.0
   url_launcher: ^6.3.2
   shared_preferences: ^2.2.0
@@ -22,8 +23,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  isar_generator: ^3.1.0
-  build_runner: ^2.4.0
+  isar_generator: ^3.1.0+1
+  build_runner: any
 
 flutter:
   uses-material-design: true
